--- a/fw/templates/deployment.yaml
+++ b/fw/templates/deployment.yaml
@@ -16,9 +16,12 @@ spec:
       labels:
         app: fwserver-{{ .name }}
     spec:
+      limits:
+      - min:
+          memory: {{ .memoryGi }}Gi
       containers:
       - name: mdm-server
-        image: filewave/fwserver-k8s:14.0.0
+        image: filewave/fwserver:{{ .version }}
         env:
           - name: FW_VNC_RELAY_PORT
             value: "{{ .port_prefix }}10"
@@ -26,6 +29,9 @@ spec:
           - mountPath: "/fwxserver/DB"
             name: ssd-vol-{{ .name }}
             subPath: db
+          - mountPath: "/private/var/log/FWAdmin Audit"
+            name: standard-vol-{{ .name }}
+            subPath: audit
           - mountPath: "/fwxserver/Data Folder"
             name: standard-vol-{{ .name }}
             subPath: data-folder
