--- a/fw/values.yaml
+++ b/fw/values.yaml
@@ -1,8 +1,17 @@
 ---
 servers:
-  - name: one
-    host: "one"
-    port_prefix: 300
+  - name: one # internal name in the cluster
+    host: "one" # FQDN, used by the proxy to redirect
+    port_prefix: 500 # this will allocate ports 5001 to 5005
+    version: "14.0.0" # Specify the version of FileWave
+    memoryGi: 4 # RAM size in GB
   - name: two
     host: "two"
-    port_prefix: 400
+    port_prefix: 501
+    version: "14.0.0"
+    memoryGi: 4
+  - name: three
+    host: "three"
+    port_prefix: 502
+    version: "14.0.0"
+    memoryGi: 4
