fixed a bug in the RAM requests resulting in the RAM not being allocated correctly for the pod

--- a/fw/templates/deployment.yaml
+++ b/fw/templates/deployment.yaml
@@ -16,21 +16,21 @@ spec:
       labels:
         app: fwserver-{{ .name }}
     spec:
-      limits:
-      - min:
-          memory: {{ .memoryGi }}Gi
       containers:
       - name: mdm-server
         image: filewave/fwserver:{{ .version }}
+        resources:
+          requests:
+            memory: "{{ .memoryGi }}Gi"
         lifecycle:
-        postStart:
-          exec:
-            command:
-              - "cat"
-              - "17.0.0.1"
-              - "{{ .host }}"
-              - ">"
-              - "/etc/hosts"
+          postStart:
+            exec:
+              command:
+                - "cat"
+                - "17.0.0.1"
+                - "{{ .host }}"
+                - ">"
+                - "/etc/hosts"
         env:
           - name: FW_VNC_RELAY_PORT
             value: "{{ .port_prefix }}10"
