--- a/fw/Chart.yaml
+++ b/fw/Chart.yaml
@@ -5,4 +5,4 @@ maintainers:
 - name: Grzegorz Piekarski
 name: fw
 version: 1.0.1
-icon: https://github.com/fw-dev/k8s-helm-charts/blob/master/fw/filewave_icon.png?raw=true
+icon: https://raw.githubusercontent.com/fw-dev/k8s-helm-charts/master/fw/filewave_icon.png
