--- a/index.yaml
+++ b/index.yaml
@@ -9,6 +9,7 @@ entries:
     - name: Matteo Ruello
     - name: Grzegorz Piekarski
     name: fw
+    icon: https://raw.githubusercontent.com/fw-dev/k8s-helm-charts/master/fw/filewave_icon.png
     urls:
     - https://github.com/fw-dev/k8s-helm-charts/blob/master/fw-1.0.1.tgz?raw=true
     version: 1.0.1
@@ -20,6 +21,7 @@ entries:
     - name: Matteo Ruello
     - name: Grzegorz Piekarski
     name: fw
+    icon: https://raw.githubusercontent.com/fw-dev/k8s-helm-charts/master/fw/filewave_icon.png
     urls:
     - https://github.com/fw-dev/k8s-helm-charts/blob/master/fw-1.0.0.tgz?raw=true
     version: 1.0.0
