Changes in order to work with helm v14 bug

--- a/fw/templates/deployment.yaml
+++ b/fw/templates/deployment.yaml
@@ -1,6 +1,6 @@
 {{- range .Values.servers }}
 ---
-kind: StatefulSet
+kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: fwserver-{{ .name }}
