--- a/fw/values.yaml
+++ b/fw/values.yaml
@@ -5,5 +5,9 @@ servers:
     host: "one.filewave.ch" # FQDN, used by the proxy to redirect
     port_prefix: 500 # this will allocate ports 5001 to 5005
     version: "14.0.0" # Specify the version of FileWave
-    memoryGi: 4 # RAM size in GB
+    clientVersion: "13.0.0" # Specify the version of FileWave client
+    boosterVersion: "14.0.0" # Specify the version of FileWave client
+    memoryGi: 8 # RAM size in GB
     storageSpaceGi: 2 # Disk Space in GB -> cannot be decreased after creation
+    numClients: 20 # Number of clients to deploy
+    numBoosters: 5 # Number of boosters to deploy
