--- a/fw/templates/clients.yaml
+++ b/fw/templates/clients.yaml
@@ -25,8 +25,6 @@ spec:
         env:
         - name: "FILEWAVE_SERVER_HOST"
           value: "{{ .host }}"
-        - name: "FILEWAVE_BOOSTER_HOST"
-          value: "fwserver-svc-boosters-{{ .name }}"
         - name: "FWCLD_SERVER_PORT"
           value: "{{ .port_prefix }}15"
         - name: "FWCLD_SERVER_PUB_PORT"
@@ -35,6 +33,12 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+        - name: "$FWCLD_BOOSTER1_HOST"
+          value: "fwserver-svc-boosters-{{ .name }}"
+        - name: "$FWCLD_BOOSTER1_PORT"
+          value: "20013"
+        - name: "$FWCLD_BOOSTER1_PUB_PORT"
+          value: "20003"
         lifecycle:
           postStart:
             exec:
