--- a/fw/templates/servers.yaml
+++ b/fw/templates/servers.yaml
@@ -100,6 +100,7 @@ spec:
         - containerPort: 20443
         - containerPort: 20445
         - containerPort: 20446
+        - containerPort: 20448
         - containerPort: 20005
         - containerPort: 20006
         
