--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -40,6 +40,6 @@ spec:
                   lifecycle:
                       postStart:
                           exec:
-                              command: ["/bin/sh", "-c", "echo 35.233.22.3 {{ .Values.serverHostname }} >> /etc/hosts"]
+                              command: ["/bin/sh", "-c", "echo \"$(nslookup test-environment-{{ .Release.Name }}-server-svc | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{ .Values.serverHostname }}\" >> /etc/hosts"]
             imagePullSecrets:
                 - name: regcred
