--- a/test-environment/templates/client.yaml
+++ b/test-environment/templates/client.yaml
@@ -1,28 +1,31 @@
+{{- range .Values.clientsConfiguration }}
+{{- if .enabled }}
+---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-    name: test-environment-{{ .Release.Name }}-client
+    name: {{ $.Values.environmentName }}-client-{{ .name }}
     labels:
-        app: test-environment-{{ .Release.Name }}-client
+        app: {{ $.Values.environmentName }}-client-{{ .name }}
 spec:
-    replicas: {{ .Values.clientCount }}
+    replicas: {{ .count }}
     selector:
         matchLabels:
-            app: test-environment-{{ .Release.Name }}-client
+            app: {{ $.Values.environmentName }}-client-{{ .name }}
     template:
         metadata:
             labels:
-                app: test-environment-{{ .Release.Name }}-client
+                app: {{ $.Values.environmentName }}-client-{{ .name }}
         spec:
             containers:
                 - name: fwclient
-                  image: "filewave/fwcld:{{ .Values.clientVersion }}"
+                  image: "filewave/fwcld:{{ $.Values.clientVersion }}"
                   resources:
                       requests:
                           memory: "20Mi"
                   env:
                       - name: "FILEWAVE_SERVER_HOST"
-                        value: "{{ .Values.serverHostname }}"
+                        value: "{{ $.Values.serverHostname }}"
                       - name: "FWCLD_SERVER_PORT"
                         value: "20015"
                       - name: "FWCLD_SERVER_PUB_PORT"
@@ -31,15 +34,19 @@ spec:
                         valueFrom:
                             fieldRef:
                                 fieldPath: metadata.name
+{{- if .upstreamBoosterHostname }}
                       - name: "FWCLD_BOOSTER1_HOST"
-                        value: "test-environment-{{ .Release.Name }}-booster-svc"
+                        value: "{{ $.Values.environmentName }}-booster-{{ .upstreamBoosterHostname }}-svc"
                       - name: "FWCLD_BOOSTER1_PORT"
                         value: "20013"
                       - name: "FWCLD_BOOSTER1_PUB_PORT"
                         value: "20003"
+{{- end }}
                   lifecycle:
                       postStart:
                           exec:
-                              command: ["/bin/sh", "-c", "echo \"$(nslookup test-environment-{{ .Release.Name }}-server-svc | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{ .Values.serverHostname }}\" >> /etc/hosts"]
+                              command: ["/bin/sh", "-c", "echo \"$(nslookup {{ $.Values.environmentName }}-server-svc | grep \"Name\" -A1 | grep \"Address\" | cut -d' ' -f2) {{ $.Values.serverHostname }}\" >> /etc/hosts"]
             imagePullSecrets:
                 - name: regcred
+{{- end }}
+{{- end }}
