--- a/test-environment/values.yaml
+++ b/test-environment/values.yaml
@@ -1,10 +1,53 @@
-serverHostname: test-environment.filewave.ch
+environmentName: te-marcins
+
+serverHostname: &serverHostname test-environment.filewave.ch
 serverVersion: 14.0.0
 serverMemoryGi: 4
 serverStorageGi: 6
 
 boosterVersion: 14.0.0
-boosterHasPublicIpAddressForDebug: false
+boostersConfiguration:
+  - name: &notChained1BoosterConfigurationName not-chained-1
+    enabled: false
+    upstreamHostname: *serverHostname
+    upstreamPort: 20015
+    hasPublicIpAddressForDebug: false
+  - name: &notChained2BoosterConfigurationName not-chained-2
+    enabled: false
+    upstreamHostname: *serverHostname
+    upstreamPort: 20015
+    hasPublicIpAddressForDebug: false
+  - name: &chained1BoosterConfigurationName chained-1
+    enabled: true
+    upstreamHostname: *serverHostname
+    upstreamPort: 20015
+    hasPublicIpAddressForDebug: false
+  - name: &chained2BoosterConfigurationName chained-2
+    enabled: true
+    upstreamHostname: te-marcins-booster-chained-1-svc      # Service prefix must be in sync with "environmentName".
+    upstreamPort: 20013
+    hasPublicIpAddressForDebug: false
+  - name: &chained3BoosterConfigurationName chained-3
+    enabled: true
+    upstreamHostname: te-marcins-booster-chained-2-svc      # Service prefix must be in sync with "environmentName".
+    upstreamPort: 20013
+    hasPublicIpAddressForDebug: false
 
 clientVersion: 14.0.0
-clientCount: 1
+clientsConfiguration:
+  - name: with-server
+    enabled: true
+    count: 1
+    upstreamBoosterHostname:
+  - name: with-chained-1
+    enabled: true
+    count: 1
+    upstreamBoosterHostname: *chained1BoosterConfigurationName
+  - name: with-chained-2
+    enabled: true
+    count: 1
+    upstreamBoosterHostname: *chained2BoosterConfigurationName
+  - name: with-chained-3
+    enabled: true
+    count: 1
+    upstreamBoosterHostname: *chained3BoosterConfigurationName
