CT-2492 add scripts to interact with Server and Booster (start, stop, restart); extend Helm chart to allow disabling Server's and Booster's services; remove unnecessary liveness probe

--- a/test-environment/templates/booster-service.yaml
+++ b/test-environment/templates/booster-service.yaml
@@ -1,5 +1,5 @@
 {{- range .Values.boostersConfiguration }}
-{{- if .enabled }}
+{{- if and .enabled .serviceEnabled }}
 ---
 kind: Service
 apiVersion: v1
