--- a/test-environment/templates/server-service.yaml
+++ b/test-environment/templates/server-service.yaml
@@ -1,3 +1,4 @@
+{{- if and .Values.serverEnabled .Values.serverServiceEnabled }}
 kind: Service
 apiVersion: v1
 metadata:
@@ -51,3 +52,4 @@ spec:
 
     selector:
         app: {{ .Values.environmentName }}-server
+{{- end }}
